Updated translations; Fixed styles on mobile

--- a/src/routes/policy/styles.module.scss
+++ b/src/routes/policy/styles.module.scss
@@ -18,12 +18,16 @@
 .header {
 	display: flex;
 	justify-content: space-between;
+	column-gap: 2rem;
+	row-gap: 1.2rem;
+	flex-wrap: wrap;
 }
 
 .title {
 	font-family: "Roboto", sans-serif;
 	font-size: 2.5em;
 	font-weight: 600;
+	line-height: 1.4;
 }
 
 .date {
